<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hano Sell</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="hello_world">Hello world!</string>
    <string name="privacy_text">By tapping to continue,you are indicating that\nyou have read the Privacy Policy and agree to\nthe Terms of Service.</string>
    <!-- <string name="app_id">459421337413192</string> -->
    <string name="app_id">792690740771547</string>

    <!-- Registration Page -->
    <string name="textview_register_first_line">Sign up</string>
    <string name="textview_register_second_line">Tell us your email, password and business name to get started</string>
    <string name="button_text_create_account">Sign up</string>
    <string name="textview_register_last_line">Have an account already ?</string>
    <string name="textview_register_sign_in">Sign In</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_business_name">Business Name</string>
    <string name="hint_contact_number">Contact Number</string>

    <!-- Login Page -->
    <string name="textview_login_first_line">Sign in to your Hano Account</string>
    <string name="textview_login_second_line">To publish, you need to be logged in</string>
    <string name="textview_login_last_line">Forgot password?</string>
    <string name="textview_login_new_member">New member?</string>
    <string name="textview_login_sign_up">Register here</string>
    <string name="textview_login_sign_in">Log in</string>
    <string name="button_text_signin_account">Login</string>

    <!-- Add product page -->
    <string name="hint_product_name">Product Name</string>
    <string name="hint_product_Tags">Tags</string>
    <string name="textview_product_image">Photo</string>
    <string name="content_descr_add_product_image_button">Add product image</string>
    <string name="content_descr_product_image">Product image</string>
    <string name="button_text_add_product">Add Product</string>
    <string name="chooser_intent_text">Select image source</string>
    <string name="hint_product_price">Price</string>
    <string name="hint_product_description">Description</string>
    <string name="hint_product_quantity">Quantity</string>
    <string name="hint_product_category">Category</string>

    <!-- Product details page -->
    <string name="textview_category_name">Category: Jewellery</string>
    <string name="action_edit_product">Edit Details</string>
    <string name="action_delete_product">Delete Product</string>

    <!--Edit Product Details Page -->
    <string name="button_text_save_product">Save</string>

    <!-- Spinner for categories -->
    <string name="prompt_categories_spinner">Category</string>

    <string-array name="array_product_category">
        <item>Jewellery</item>
    </string-array>


    <!-- FAB Text -->
    <string name="base_icon_one">Promote</string>
    <string name="base_icon_two">Sell</string>
    <string name="base_icon_three">Share</string>

    <string name="base_icon_add_product">Add Product</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Barber List</item>
        <item>Booking History</item>
        <item>About Us</item>
        <item>Logout</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!-- Navigation Drawer Items -->
    <!-- Nav Drawer Menu Items -->

    <!-- Offline sales cart activity -->
    <!-- Spinner hobbies -->
    <string name="quantity_prompt">Choose quantity</string>

    <string-array name="quantities">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
    </string-array>

    <string name="coming_soon_fragment">Coming Soon</string>
    <string name="intro_screen3_heading">Online Promotion</string>
    <string name="intro_screen3_subTitle">Promote your products on facebook and other social media and get order notification on you mobile</string>
    <string name="intro_screen4_heading">Setup accounts to receive payments</string>
    <string name="intro_screen4_subTitle">Allow fans to buy from social feeds with a few clicks</string>
    <string name="intro_screen5_heading">Manage all your orders from the phone</string>
    <string name="intro_screen5_subTitle">Process order on the go in less time</string>
    <string name="title_activity_intro_screen_slide">IntroScreenSlideActivity</string>
    <string name="skip_intro">Skip Intro</string>

    <string name="preview_receipt">Preview Receipt</string>
    <string name="print_receipt">Print Receipt</string>
    <string name="title_activity_receipt">Generate Receipts</string>

    <string name="send_email_receipt"> Email Receipt</string>


    <!-- Receipt Activity -->
    <string name="receipt_first_line">Your sales is complete.</string>
    <string name="receipt_second_line">Click to send receipt</string>

    <string name="button_text_receipt_goto_my_products">Home</string>
    <string name="textview_print_receipt">Print Receipt</string>
    <string name="textview_email_receipt">Email Receipt</string>
    <string name="textview_sms_receipt">SMS Receipt</string>

    <!-- Landing Page Fragment -->
    <string name="textview_social_product_catalog">Promote Online</string>
    <string name="textview_digital_receipt_book">Receipt Book</string>
    <string name="textview_fish_bowl">Fish Bowl</string>

    <!-- Select Products Activity -->
    <string name="button_text_add_products_to_cart">Sell Now</string>
    <string name="button_text_promote_online">Promote Online</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Toolbar Titles for Activities -->
    <string name="product_details_activity">Product Details</string>
    <string name="publish_chooser_activity">Social Media</string>
    <string name="offline_product_cart_activity">Receipt Book</string>
    <string name="receipt_activity">Generate Receipts</string>

    <!-- Manifest Activity title -->
    <string name="title_activity_login">Sign In</string>
    <string name="title_activity_register">Sign Up</string>
    <string name="title_activity_add_product">Add Product</string>
    <string name="title_activity_dash_board">Dashboard</string>
    <string name="title_activity_product_detail">Product Detail</string>
    <string name="title_activity_publish_chooser">Social Media</string>
    <string name="title_activity_offline_product_cart">Receipt Book</string>
    <string name="title_offline_sale_printer_activity_receipt">Receipt Preview</string>

    <!-- Order Details Activity -->
    <string name="title_activity_order_details">OrderDetailsActivity</string>
    <string name="order_id">Order ID:</string>
    <string name="order_date">Date:</string>
    <string name="order_status">Status: </string>
    <string name="order_type">Type: </string>
    <string name="order_summary_header">Order Summary</string>
    <string name="order_item_header">Items</string>
    <string name="order_quantity_header">Qty</string>
    <string name="order_amount_header">Amount</string>
    <string name="shipping_address_header">Address to Ship</string>
    <string name="action_update_order_status">Update order status</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Trends Activity -->

    <string name="textview_online_trends">Total Online Sales</string>
    <string name="textview_offline_trends">Total Offline Sales</string>
    <string name="textview_listed_product_header">Listed products</string>
    <string name="textview_list_product_subheader">Add, remove and update your products</string>
    <string name="textview_active_orders_header">Active orders</string>
    <string name="textview_active_orders_subheader">Track your incoming order</string>
    <string name="textview_completed_orders_header">Completed Orders</string>
    <string name="textview_revenue_generated">Revenue Generated</string>


    <!-- Facebook Page List Activity -->
    <string name="title_activity_fb_page_list">Fb Page list</string>
    <string name="title_activity_product_list">ProductList</string>
    <string name="title_activity_login_registration">LoginRegistration</string>

    <!-- Speed Post Tracking Fragment -->
    <string name="textview_speedpost_tracking_number">Enter tracking no.</string>
    <string name="textview_speedpost_tracking_details">Tracking details</string>
    <string name="title_activity_choose_location">ChooseLocation</string>
    <string name="title_activity_main">MainActivity</string>

</resources>