<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- The ActionBar -->

    <!--<ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >-->

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <RelativeLayout
        android:id="@+id/masterLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#555555"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <!--<TextView
            android:id="@+id/textViewFirstLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/feed_item_margin"
            android:layout_centerHorizontal="true"
            android:text="@string/textview_login_first_line"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/login_page_first_line"
            android:textStyle="bold" />
-->
        <!--   <TextView<include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

               android:id="@+id/textViewSecondLine"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_below="@+id/textViewFirstLine"
               android:layout_marginTop="@dimen/feed_item_margin"
               android:text="Get in there"
               android:textAppearance="?android:attr/textAppearanceMedium" />-->

        <RelativeLayout
            android:id="@+id/formLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@color/transparent_white"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <EditText
                android:id="@+id/loginUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/feed_item_margin"
                android:ems="10"
                android:hint="@string/hint_email"
                android:inputType="text"
                android:textColorHint="@android:color/darker_gray">

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/loginPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/loginUsername"
                android:layout_marginTop="@dimen/view_element_margin"
                android:ems="10"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:textColorHint="@android:color/darker_gray" />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/loginPassword"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/view_element_margin"
                android:background="@color/brand_color_light"
                android:padding="@dimen/button_padding"
                android:text="@string/button_text_signin_account"
                android:textColor="@color/add_product_button_text_color" />

            <TextView
                android:id="@+id/textViewLastLine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/loginButton"
                android:layout_marginTop="@dimen/view_element_margin"
                android:text="@string/textview_login_last_line"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textViewLastLine"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/view_element_margin"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewNewMember"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/view_element_margin"
                    android:layout_toLeftOf="@+id/textViewSignUp"
                    android:text="@string/textview_login_new_member"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/textViewSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textViewLastLine"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="@dimen/feed_item_margin"
                    android:clickable="true"
                    android:onClick="runIntent"
                    android:text="@string/textview_login_sign_up"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/brand_color_light" />

            </LinearLayout>

        </RelativeLayout>

        <!-- <Button
             android:id="@+id/skipButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:background="@color/trasnparent_black"
             android:textColor="@color/brand_color_light"
             android:text="Skip"
             android:layout_marginTop="@dimen/view_element_margin" />-->

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginRight="5dp"
            android:visibility="gone" />
    </RelativeLayout>

    <!-- </ScrollView>-->

</RelativeLayout>